tests/negative/lexer/char_escape_eof.orng
// char_escape_eof.orng:6:49: error: expected a character, got end-of-file
//     let x = 'this character doesnt have an end!\
//                                                ^
// 
fn main() -> Int {
    let x = 'this character doesnt have an end!\